fix: realigns .nav-link lower

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,10 @@ h1 {
     height:150px;
 }
 
+.block {
+    margin:0;
+}
+
 /* h2 {
     max-width: 60%;
 } */
@@ -92,6 +96,11 @@ h1 {
     position:relative;
     font-size: 1.5rem;
 }
+
+.nav-link {
+    margin-top:40px;
+}
+
 
  #burger-title {
     text-transform: uppercase;
